--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ Prototypes/Pinus/Pinus.pdf
 ActivitiesPerformedSummary.html
 LabourAllocationSummary.html
 CurrentDescriptiveSummary.html
+Models/DataAssimilation/Test.cs
